# littleball

./: .gitignore
LittleBall/: LittleBall.csproj
curse/: CMakeLists.txt  cputem.cpp  cvtest.cpp  iolook.cpp  move.cpp  openpic.cpp  train_onnx.py  train_pt.py
curse/onnxruntime/: CodeSignSummary-5b93a4c5-6805-4515-ab4a-ce8064843fa9.md  CodeSignSummary-8f58bf53-cc5a-4fc6-b116-fefdad878754.md
dataset/labels/train/: ph4.txt
datasets/labels/: train.cache
datasets/labels/train/: ph1.txt  ph2.txt  ph3.txt
datasets/labels/val/: ph5.txt  ph6.txt  ph7.txt
trainsball/: train.py  trans.py
trainsball/ultralytics/cfg/datasets/: Mydata.yaml
ultralytics/: train.py
ultralytics/ultralytics/cfg/datasets/: Mydata.yaml
ultralytics/ultralytics/cfg/datasets/dataset/labels/: val.cache
